# NewDemo_FB_TT

./: ai-content-pipeline-spec.md
.claude/commands/: tao-noi-dung.md
ai-content-pipeline/: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pipeline.py  pyproject.toml  requirements.txt
ai-content-pipeline/src/: config.py
ai-content-pipeline/src/models/: db_models.py  schemas.py
ai-content-pipeline/src/prompts/: __init__.py  content_generation_prompt.txt  research_system_prompt.txt
ai-content-pipeline/src/publishers/: base.py  facebook_publisher.py  tiktok_publisher.py
ai-content-pipeline/src/services/: content_extractor.py  content_generation_service.py  llm_service.py  research_service.py  search_service.py  source_deduplicator.py  storage_service.py  tts_service.py  video_builder.py
ai-content-pipeline/src/ui/: components.py  history_page.py  research_page.py
ai-content-pipeline/src/utils/: ffmpeg_utils.py  text_utils.py  url_utils.py
ai-content-pipeline/tests/: test_deduplicator.py  test_llm_parsing.py  test_publishers_mock.py  test_schemas.py
